website/websites/u64q/code/fibonacci.3.pyston.log

 Thu, 29 Oct 2020 13:14:40 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston-3.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston-3.pyston", line 22
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
